--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
   <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
 
   <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
@@ -16,12 +17,16 @@
   </head>
 
 <body>
+  <div id="ovModule"></div>
+  <div id="rpModule"></div>
   <div id="qaModule"></div>
   <div id="rrmodule"></div>
   <!-- <script src='http://localhost:4000/rrmodule'></script> -->
   <!-- <script src='http://localhost:4000/qa'></script> -->
-  <script src="http://ec2-54-172-55-163.compute-1.amazonaws.com/rrmodule"></script>
+  <script src="http://ec2-35-165-217-158.us-west-2.compute.amazonaws.com/ov"></script>
+  <script src="http://ec2-3-12-148-239.us-east-2.compute.amazonaws.com/rp"></script>
   <script src="http://ec2-18-224-182-50.us-east-2.compute.amazonaws.com/qaModule"></script>
+  <script src="http://ec2-54-172-55-163.compute-1.amazonaws.com/rrmodule"></script>
 </body>
 
 </html>
